--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Velkommen"
+        android:text="@string/create_location_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
