--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="green">#3F8D6B</color>
+    <color name="salmon">#FDB887</color>
+    <color name="beige">#C57D59</color>
+    <color name="black">#0D0A07</color>
+    <color name="white">#FDFFD6</color>
+    <color name="blue">#8DE2D6</color>
+    <color name="yellow">#FFF370</color>
 </resources>
