--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -7,8 +7,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_location_text"
+        android:textSize="@dimen/small"
+        android:id="@+id/specify_location_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/specify_location_text_view"
+        android:src="@drawable/greenhouse"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="@dimen/xlarge"
+        android:layout_width="@dimen/xlarge"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
