--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".creategarden.ChoosePlantFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/search_plant_edittext" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/choose_plant_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
