--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_location_text"
@@ -11,16 +12,39 @@
         android:id="@+id/specify_location_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specify_location_text_view"
+        android:id="@+id/greenhouse_button"
         android:src="@drawable/greenhouse"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:layout_height="@dimen/xlarge"
-        android:layout_width="@dimen/xlarge"/>
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/greenhouse_button"
+        android:id="@+id/sun_button"
+        android:src="@drawable/sun"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sun_button"
+        android:id="@+id/house_button"
+        android:src="@drawable/house"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
