--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="font_large">36sp</dimen>
     <dimen name="font_xlarge">54sp</dimen>
 
-    <dimen name="spacing_small">5dp</dimen>
-    <dimen name="spacing_medium">10dp</dimen>
-    <dimen name="spacing_large">15dp</dimen>
-    <dimen name="spacing_xlarge">20dp</dimen>
+    <dimen name="spacing_small">10dp</dimen>
+    <dimen name="spacing_medium">20dp</dimen>
+    <dimen name="spacing_large">40dp</dimen>
+    <dimen name="spacing_xlarge">80dp</dimen>
+
+    <dimen name="picture">200dp</dimen>
 </resources>
