--- a/app/src/main/res/drawable/sun.xml
+++ b/app/src/main/res/drawable/sun.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@drawable/sun_drawing"/>
+        android:drawable="@drawable/outdoors_pressed"/>
     <item android:state_focused="true"
-        android:drawable="@drawable/sun_drawing"/>
-    <item android:drawable="@drawable/sun_drawing"/>
+        android:drawable="@drawable/outdoors_focused"/>
+    <item android:drawable="@drawable/outdoors_normal"/>
 </selector>
