--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -16,17 +16,7 @@
     <ImageButton
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specify_location_text_view"
-        android:id="@+id/greenhouse_button"
-        android:src="@drawable/greenhouse"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:layout_height="@dimen/picture"
-        android:layout_width="@dimen/picture"/>
-
-    <ImageButton
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/greenhouse_button"
-        android:id="@+id/sun_button"
+        android:id="@+id/outdoors_button"
         android:src="@drawable/sun"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
@@ -34,13 +24,22 @@
         android:layout_width="@dimen/picture"/>
 
     <ImageButton
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sun_button"
-        android:id="@+id/house_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        android:id="@+id/indoors_button"
         android:src="@drawable/house"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
         android:layout_width="@dimen/picture"/>
 
+    <ImageButton
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/indoors_button"
+        android:id="@+id/greenhouse_button"
+        android:src="@drawable/greenhouse"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="@dimen/picture"
+        android:layout_width="@dimen/picture"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
