--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="@dimen/spacing_medium">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_location_text"
-        android:textSize="@dimen/font_small"
+        android:textSize="@dimen/font_medium"
+        android:textColor="@color/black"
         android:id="@+id/specify_location_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <ImageButton
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specify_location_text_view"
+        android:background="@null"
         android:id="@+id/outdoors_button"
         android:src="@drawable/sun"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
-        android:layout_width="@dimen/picture"/>
+        android:layout_width="@dimen/picture"
+        android:layout_marginTop="@dimen/spacing_medium"/>
 
     <ImageButton
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        android:background="@null"
         android:id="@+id/indoors_button"
         android:src="@drawable/house"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
-        android:layout_width="@dimen/picture"/>
+        android:layout_width="@dimen/picture"
+        android:layout_marginTop="@dimen/spacing_medium"/>
 
     <ImageButton
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/indoors_button"
+        android:background="@null"
         android:id="@+id/greenhouse_button"
         android:src="@drawable/greenhouse"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
-        android:layout_width="@dimen/picture"/>
+        android:layout_width="@dimen/picture"
+        android:layout_marginTop="@dimen/spacing_medium"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
