--- a/app/src/main/res/layout/list_item_plant.xml
+++ b/app/src/main/res/layout/list_item_plant.xml
@@ -23,6 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_medium"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
