--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -30,9 +30,20 @@
         android:layout_width="@dimen/picture"
         android:layout_marginTop="@dimen/spacing_medium"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/outdoors_button"
+        app:layout_constraintEnd_toEndOf="@id/outdoors_button"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        android:id="@+id/outdoors_text_view"
+        android:textColor="@color/black"
+        android:textSize="@dimen/font_medium"
+        android:text="@string/outdoors"/>
+
     <ImageButton
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_text_view"
         android:background="@null"
         android:id="@+id/indoors_button"
         android:src="@drawable/house"
@@ -41,6 +52,16 @@
         android:layout_height="@dimen/picture"
         android:layout_width="@dimen/picture"
         android:layout_marginTop="@dimen/spacing_medium"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/indoors_button"
+        app:layout_constraintEnd_toEndOf="@id/indoors_button"
+        app:layout_constraintTop_toBottomOf="@id/indoors_button"
+        android:textColor="@color/black"
+        android:textSize="@dimen/font_medium"
+        android:text="@string/indoors"/>
 
     <ImageButton
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,4 +74,14 @@
         android:layout_height="@dimen/picture"
         android:layout_width="@dimen/picture"
         android:layout_marginTop="@dimen/spacing_medium"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/greenhouse_button"
+        app:layout_constraintEnd_toEndOf="@id/greenhouse_button"
+        app:layout_constraintTop_toBottomOf="@id/greenhouse_button"
+        android:textColor="@color/black"
+        android:textSize="@dimen/font_medium"
+        android:text="@string/greenhouse"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
