Now using roboto condensed for list and search field

--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -15,6 +15,7 @@
         android:inputType="textCapWords"
         android:textColor="@color/black"
         android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
