--- a/app/src/main/res/layout/list_item_plant.xml
+++ b/app/src/main/res/layout/list_item_plant.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_medium"
         android:textColor="@color/black"
+        android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
