Updated to comments in #32

--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -7,6 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/location_text_view"
+        android:fontFamily="@font/roboto"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="@dimen/font_xlarge"
