--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -12,6 +12,7 @@
         android:text="@string/create_location_text"
         android:textSize="@dimen/font_medium"
         android:textColor="@color/black"
+        android:fontFamily="@font/roboto"
         android:id="@+id/specify_location_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,7 @@
         android:id="@+id/outdoors_text_view"
         android:textColor="@color/black"
         android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
         android:text="@string/outdoors"/>
 
     <ImageButton
@@ -61,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/indoors_button"
         android:textColor="@color/black"
         android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
         android:text="@string/indoors"/>
 
     <ImageButton
@@ -83,5 +86,6 @@
         app:layout_constraintTop_toBottomOf="@id/greenhouse_button"
         android:textColor="@color/black"
         android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
         android:text="@string/greenhouse"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
