--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -5,17 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".creategarden.ChoosePlantFragment" >
+    android:foregroundTint="@color/black"
+    tools:context=".creategarden.ChoosePlantFragment">
 
-    <EditText
-        android:id="@+id/search_plant_edittext"
+    <SearchView
+        android:id="@+id/search_plant_searchview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/beige"
         android:backgroundTint="@color/green"
-        android:inputType="textCapWords"
+        android:fontFamily="@font/roboto"
         android:textColor="@color/black"
         android:textSize="@dimen/font_medium"
-        android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_plant_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/search_plant_searchview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
