--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -8,14 +8,16 @@
     android:foregroundTint="@color/black"
     tools:context=".creategarden.ChoosePlantFragment">
 
-    <SearchView
-        android:id="@+id/search_plant_searchview"
+    <EditText
+        android:id="@+id/search_plant_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/beige"
-        android:backgroundTint="@color/green"
+        android:layout_margin="@dimen/spacing_small"
         android:fontFamily="@font/roboto"
+        android:hint="@string/search_text"
+        android:iconifiedByDefault="false"
         android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="@dimen/font_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +30,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_plant_searchview" />
+        app:layout_constraintTop_toBottomOf="@+id/search_plant_edittext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
