--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -5,17 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".creategarden.ChoosePlantFragment" >
+    android:foregroundTint="@color/black"
+    tools:context=".creategarden.ChoosePlantFragment">
 
     <EditText
         android:id="@+id/search_plant_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/green"
-        android:inputType="textCapWords"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_medium"
+        android:layout_margin="@dimen/spacing_small"
         android:fontFamily="@font/roboto"
+        android:hint="@string/search_text"
+        android:iconifiedByDefault="false"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
+        android:textSize="@dimen/font_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
