--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="spacing_xlarge">80dp</dimen>
 
     <dimen name="picture">200dp</dimen>
+    <dimen name="grid_tile">100dp</dimen>
+    <dimen name="line">2dp</dimen>
 </resources>
