--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -69,4 +69,12 @@
         app:layout_constraintTop_toBottomOf="@id/location_text_view"
         android:id="@+id/add_column_button"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tile3_image_view"
+        android:id="@+id/add_row_button"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
