--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -3,14 +3,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/location_text_view"
-        android:fontFamily="@font/roboto"
+    <ImageButton
+        android:id="@+id/insert_plant_btn"
+        android:layout_width="@dimen/font_xlarge"
+        android:layout_height="@dimen/font_xlarge"
+        android:background="@null"
+        android:contentDescription="@string/select_plant_text"
+        android:src="@drawable/ic_plant"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="@dimen/font_xlarge"
-        android:textColor="@color/black"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
