--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -15,59 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toStartOf="@id/parent_layout"
-        app:layout_constraintEnd_toStartOf="@id/tile2_image_view"
-        app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
-        app:layout_constraintBottom_toTopOf="@id/tile3_image_view"
-        android:id="@+id/tile1_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toEndOf="@id/tile1_image_view"
-        app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
-        app:layout_constraintBottom_toTopOf="@id/tile4_image_view"
-        android:id="@+id/tile2_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toStartOf="@id/parent_layout"
-        app:layout_constraintEnd_toStartOf="@id/tile4_image_view"
-        app:layout_constraintTop_toBottomOf="@id/tile1_image_view"
-        android:id="@+id/tile3_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toEndOf="@id/tile3_image_view"
-        app:layout_constraintTop_toBottomOf="@id/tile2_image_view"
-        android:id="@+id/tile4_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
-        app:layout_constraintStart_toEndOf="@id/tile2_image_view"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
         android:id="@+id/add_column_button"/>
 
@@ -75,8 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
-        app:layout_constraintStart_toStartOf="@id/tile2_image_view"
-        app:layout_constraintTop_toBottomOf="@id/tile3_image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/add_row_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
