--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -6,8 +6,8 @@
 
     <ImageButton
         android:id="@+id/insert_plant_btn"
-        android:layout_width="@dimen/font_xlarge"
-        android:layout_height="@dimen/font_xlarge"
+        android:layout_width="@dimen/spacing_xlarge"
+        android:layout_height="@dimen/spacing_xlarge"
         android:background="@null"
         android:contentDescription="@string/select_plant_text"
         android:src="@drawable/ic_plant"
@@ -15,66 +15,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_column_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintEnd_toStartOf="@id/tile2_image_view"
-        app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
-        app:layout_constraintBottom_toTopOf="@id/tile3_image_view"
-        android:id="@+id/tile1_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toEndOf="@id/tile1_image_view"
-        app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
-        app:layout_constraintBottom_toTopOf="@id/tile4_image_view"
-        android:id="@+id/tile2_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintEnd_toStartOf="@id/tile4_image_view"
-        app:layout_constraintTop_toBottomOf="@id/tile1_image_view"
-        android:id="@+id/tile3_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/grid_tile"
-        app:layout_constraintStart_toEndOf="@id/tile3_image_view"
-        app:layout_constraintTop_toBottomOf="@id/tile2_image_view"
-        android:id="@+id/tile4_image_view"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:background="@null"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        app:layout_constraintStart_toEndOf="@id/tile2_image_view"
-        app:layout_constraintTop_toBottomOf="@id/insert_plant_btn"
-        android:id="@+id/add_column_button"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
+        android:contentDescription="@string/add_column_text"
+        android:layout_margin="@dimen/spacing_small"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tile3_image_view"
-        android:id="@+id/add_row_button"/>
+        android:src="@drawable/ic_plus"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_row_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_row_text"
+        android:layout_margin="@dimen/spacing_small"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/ic_plus"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/remove_column_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_column_text"
+        android:layout_marginTop="@dimen/spacing_small"
+        app:layout_constraintTop_toBottomOf="@id/add_column_button"
+        app:layout_constraintStart_toStartOf="@id/add_column_button"
+        android:src="@drawable/ic_minus"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/remove_row_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_column_text"
+        android:layout_marginStart="@dimen/spacing_small"
+        app:layout_constraintTop_toTopOf="@id/add_row_button"
+        app:layout_constraintStart_toEndOf="@id/add_row_button"
+        android:src="@drawable/ic_minus"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
