Refactoring GridTile as a public class and remove buttons are now one method

--- a/app/src/main/res/navigation/nav_graph_create_garden.xml
+++ b/app/src/main/res/navigation/nav_graph_create_garden.xml
@@ -14,7 +14,7 @@
             android:id="@+id/plant_selected_action"
             app:destination="@id/createGridFragment" />
         <argument android:name="coordinate"
-            app:argType="dk.mifu.pmos.vegetablegardening.data.Coordinate" />
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Coordinate" />
     </fragment>
     <fragment
         android:id="@+id/createGridFragment"
