can name gardens and save them in the database
I had to change the converter, because it failed at converting to just
an ObservableMap.

--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -46,4 +46,16 @@
         app:layout_constraintStart_toEndOf="@id/add_row_button"
         android:src="@drawable/ic_minus"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/save_garden_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/save_garden_text"
+        android:layout_marginStart="@dimen/spacing_small"
+        android:layout_margin="@dimen/spacing_small"
+        android:backgroundTint="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_save"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
