Renamed so "garden" is now a bed and multiple beds are a garden

--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -2,6 +2,6 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Gardens" />
-    <item android:title="Plants" />
+    <item android:title="@string/bed_button_text" />
+    <item android:title="@string/plant_button_text" />
 </menu>
