Clicking on bed now updates BedViewModel sp BedOverviewFragment can access the bed through the viewmodel

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -17,5 +17,6 @@
         android:id="@+id/bedOverviewFragment"
         android:name="dk.mifu.pmos.vegetablegardening.viewgarden.BedOverviewFragment"
         android:label="fragment_bed_overview"
-        tools:layout="@layout/fragment_bed_overview"/>
+        tools:layout="@layout/fragment_bed_overview">
+    </fragment>
 </navigation>
