Can now update when the plant was watered and harvested

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -36,6 +36,9 @@
             android:id="@+id/to_plant_details"
             app:destination="@id/plantDetails" />
         <argument
+            android:name="coordinate"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Coordinate" />
+        <argument
             android:name="plant"
             app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
     </dialog>
