--- a/app/src/main/res/layout/fragment_plant_details.xml
+++ b/app/src/main/res/layout/fragment_plant_details.xml
@@ -88,4 +88,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/plant_harvested_date"
+        app:layout_constraintTop_toBottomOf="@id/plant_watered_date"
+        android:fontFamily="@font/roboto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
