renamed PlantInfoFragment to PlantDetailsDialogFragment to make it more clear what it is

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -30,7 +30,7 @@
     </fragment>
     <dialog
         android:id="@+id/plantInfoFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.viewgarden.PlantInfoFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.viewgarden.PlantDetailsDialogFragment"
         android:label="PlantInfoFragment" >
         <action
             android:id="@+id/to_plant_details"
