Major refactor of overall project structure
Navigation classes are gone since they only made the structure more
complicated

Activities and fragments now have their own packages

Moved some constants to GridHelper since they were declared in two
different classes

Moved SaveBedDialogFragment to creategarden package since it's not a
view but a fragment related to creating your garden

--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/spacing_small"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewgarden.PlantDetailsDialogFragment">
+    tools:context=".fragments.viewgarden.PlantDetailsDialogFragment">
 
     <Button
         android:id="@+id/water_button"
