--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewgarden.GardenOverviewFragment">
+    tools:context=".fragments.viewgarden.GardenOverviewFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gardens_recycler_view"
