--- a/app/src/main/res/navigation/nav_graph_create_garden.xml
+++ b/app/src/main/res/navigation/nav_graph_create_garden.xml
@@ -7,7 +7,7 @@
 
     <dialog
         android:id="@+id/choosePlantFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.creategarden.ChoosePlantFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.ChoosePlantFragment"
         android:label="fragment_choose_plant"
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
@@ -15,7 +15,7 @@
     </dialog>
     <fragment
         android:id="@+id/createGridFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.creategarden.CreateGridFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.CreateGridFragment"
         android:label="CreateGridFragment" >
         <action
             android:id="@+id/choose_plant_action"
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/specifyLocationFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.creategarden.SpecifyLocationFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.SpecifyLocationFragment"
         android:label="SpecifyLocationFragment" >
         <action
             android:id="@+id/next_action"
