Made setup for different dialog with planting actions for empty tiles

--- a/app/src/main/res/layout/list_item_tile.xml
+++ b/app/src/main/res/layout/list_item_tile.xml
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:text="HELLO"
         android:id="@+id/test_textview"
-        android:elevation="@dimen/bring_on_top_of_button"/>
+        android:elevation="@dimen/bring_on_top_of_button"
+        android:visibility="gone"/>
 
 </FrameLayout>
 
