--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -19,7 +19,10 @@
         android:label="BedOverviewFragment" >
         <action
             android:id="@+id/show_plant_info"
-            app:destination="@id/plantInfoFragment" />
+            app:destination="@id/plantDetailsDialogFragment" />
+        <action
+            android:id="@+id/show_planting_options"
+            app:destination="@id/emptyTileDialogFragment"/>
     </fragment>
     <fragment
         android:id="@+id/plantDetails"
@@ -29,7 +32,7 @@
             app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
     </fragment>
     <dialog
-        android:id="@+id/plantInfoFragment"
+        android:id="@+id/plantDetailsDialogFragment"
         android:name="dk.mifu.pmos.vegetablegardening.fragments.viewgarden.PlantDetailsDialogFragment"
         android:label="PlantInfoFragment" >
         <action
@@ -42,4 +45,8 @@
             android:name="plant"
             app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
     </dialog>
+    <dialog
+        android:id="@+id/emptyTileDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.viewgarden.EmptyTileDialogFragment"
+        android:label="EmptyTile"/>
 </navigation>
