Predicate classes added to allow a predicate as argument. BedOverViewFragment can now start a ChoosePlantFragment.kt and see all plantables in recyclerview

--- a/app/src/main/res/navigation/nav_graph_create_garden.xml
+++ b/app/src/main/res/navigation/nav_graph_create_garden.xml
@@ -12,6 +12,9 @@
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
             app:argType="dk.mifu.pmos.vegetablegardening.models.Coordinate" />
+        <argument
+            android:name="predicate"
+            app:argType="dk.mifu.pmos.vegetablegardening.helpers.predicates.Predicate" />
     </dialog>
     <fragment
         android:id="@+id/createGridFragment"
