Moved ChoosePlantDialogFragment.kt out of creategarden since used from several places and reverted plantdata to original

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -47,7 +47,7 @@
     </dialog>
     <dialog
         android:id="@+id/choosePlantFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.ChoosePlantDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.ChoosePlantDialogFragment"
         android:label="fragment_choose_plant"
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
