--- a/app/src/main/res/navigation/nav_graph_create_garden.xml
+++ b/app/src/main/res/navigation/nav_graph_create_garden.xml
@@ -7,7 +7,7 @@
 
     <dialog
         android:id="@+id/choosePlantFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.ChoosePlantDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.ChoosePlantDialogFragment"
         android:label="fragment_choose_plant"
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
