--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -33,7 +33,7 @@
     </fragment>
     <dialog
         android:id="@+id/plantDetailsDialogFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.viewgarden.PlantDetailsDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.PlantDetailsDialogFragment"
         android:label="PlantInfoFragment" >
         <action
             android:id="@+id/to_plant_details"
@@ -47,7 +47,7 @@
     </dialog>
     <dialog
         android:id="@+id/choosePlantFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.ChoosePlantDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.ChoosePlantDialogFragment"
         android:label="fragment_choose_plant"
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
