--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/spacing_small"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.viewgarden.PlantDetailsDialogFragment">
+    tools:context=".fragments.dialogs.PlantDetailsDialogFragment">
 
     <Button
         android:id="@+id/water_button"
